# open-easm

./: .dockerignore  .env.example  .gitignore  ATTACK_SURFACE_ASSESSMENT.md  BACKEND_AUDIT_REPORT.md  BACKLOG.md  BUSINESS_LOGIC_AUDIT.md  COMPREHENSIVE_AUDIT.md  CORRELATION_AUDIT.md  DESIGN.md  Dockerfile  Dockerfile.test  LICENSE  PIVOT_CHAIN_AUDIT.md  README.md  ROADMAP.md  SCHEMA_AUDIT_REPORT.md  alembic.ini  config.offline.yaml  config.yaml  config.yaml.example  docker-compose-dev.yml  docker-compose.offline.yml  docker-compose.test.yml  docker-compose.yml  easm-passive-monitor-prd-v0.2.md  package-lock.json  pyproject.toml
.omo/run-continuation/: ses_0793f92b0ffeiYLqt3KwTtvKtb.json  ses_079402b63ffey3ivbBidyVV5XG.json  ses_079e58558ffeOha5GAuJOxJYjT.json  ses_079e592b1ffefG6wodQaXsOsDS.json  ses_079e5a0bbffeZ2Tz19V5P5mP07.json  ses_079e5af0dffedl9o7jcV9E3Z6K.json  ses_079eb7aaeffe3YZjvoYE15SZM2.json  ses_079eb899effeliOelNmiP2t1Mo.json  ses_079eba07bffeP4tf1k89MK4D8s.json  ses_079fbdac8ffe5sJlYyxR2N3kjQ.json  ses_079fbfe9affeGnp1Zr5Pws3u6d.json  ses_079fc2763ffeWMvmUqWipIY5fs.json  ses_079fc66aeffeVpKNJuWcJosKCm.json  ses_07b83d7abffe1Nu0nabt9pC1Sa.json  ses_07ba56cb4ffeam0Kf3EivZ5pyt.json  ses_07bba3fd8ffeU1YTCJAYRHdG4X.json  ses_07d2994bdffefbl6MsdnQZN3ao.json  ses_07d49745affep9Z4vYtkv1zVz6.json  ses_07d49dd63ffedJuFtq9dh0023L.json  ses_07d4a05a9ffe3w3eY712wn7aE0.json  ses_07d4a22f4ffeiAkZxFbt5D2UJW.json  ses_07d4a2c4affeFr6HwBMPceb0Pt.json  ses_07d4a4e9afferm0VItCoMdRxES.json  ses_07d4a5ccaffexiv9OFamfyRKfz.json  ses_07d619467ffemOL77O2OAMmOdU.json  ses_07d6da99dffesaGB0E7kP0yXj4.json  ses_07d6df35dffe3olGHwPwTEis9O.json  ses_07d7c0714ffeIWz4QdwiP5ohOn.json  ses_07d7c8888ffeas6u6O5Z7sXxTV.json  ses_07d7ca227ffeVrJsA71eL6AWOE.json  ses_07d7cb66fffeNaUUsOEhiImCRF.json  ses_07d7cbaa1ffeJo2rDEY6ua01sH.json  ses_07d7f8da2ffeHd8miFSPMsTSvL.json  ses_07d8009f5ffeGXvg2Vq89OP6gl.json  ses_07d802830ffe3kcfYB8L6zHwSf.json  ses_07d80649fffeCC2XuPwXBySJkh.json  ses_07d806f0bffejm653tJLFQz5MO.json  ses_07d80726affeVD4va4Rxmynwmm.json  ses_07d807de4ffeZqn4zaequf0afp.json  ses_07d809237ffeBiEXTcvQOicokP.json  (+23 more)
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_orgs_and_entities.py  0003_pivot_queue.py  0004_run_logs.py  0005_findings.py  0006_vuln_cache.py  0007_task_queue.py  0008_procrastinate.py  0009_parent_entity_id.py  0010_epss_cache.py  0011_finding_confidence.py  0012_legal_acceptance.py  0013_domain_verification.py  0014_auth_tables.py  0015_finding_fingerprint.py  20260518_0002_asset_change_events.py
correlations/: cloud_bucket_open.yaml  dev_or_test_system.yaml  email_in_breach.yaml  high_risk_port_exposed.yaml  known_exploited_vulnerability.yaml  outlier_country.yaml  saas_hosted_infrastructure.yaml  stale_certificate.yaml  subdomain_takeover_hygiene.yaml  subdomain_takeover_risk.yaml
docs/: certificate-lifecycle-management.md  easm-platform-maturity.md  offline-harness.md  takeover-detection.md
scripts/: pytest_no_skip.py  test_backend.py
src/easm/: __init__.py  _compat.py  backfill.py  classify.py  config.py  cpe_mapper.py  db.py  entity_store.py  epss.py  gc.py  geoip.py  keyword_engine.py  keywords.py  mail_provider.py  main.py  models.py  network_guard.py  pivot_store.py  queue.py  rate_limiter.py  runtime.py  scheduler.py  store.py  task_queue_legacy.py  validators.py  vuln_cache.py  (+3 more)
tests/: conftest.py  test_api.py  test_api_entities.py  test_api_graph.py  test_auth_api_keys.py  test_auth_config.py  test_auth_middleware.py  test_auth_password.py  test_auth_routes.py  test_auth_session.py  test_auth_store.py  test_backfill.py  test_classify.py  test_config.py  test_correlation_rules.py  test_cpe_mapper.py  test_dedup.py  test_entity_normalization.py  test_entity_store.py  test_executive_scoring.py  test_geoip.py  test_hardening.py  test_integration_vuln.py  test_keyword_engine.py  test_keywords.py  test_legal_terms.py  test_location.py  test_mail_provider.py  test_network_guard.py  test_offline_harness_config.py  test_pivot_handlers.py  test_pivot_resolver.py  test_pivot_worker.py  test_pivot_worker_lifecycle.py  test_rate_limiter.py  test_report_generation.py  test_runners.py  test_runtime_http_policy.py  test_scheduler.py  test_schema_contracts.py  (+12 more)
ui/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+378 files in other folders)
