[project]
name = "open-easm"
version = "1.0.0"
description = "Self-hosted passive External Attack Surface Management monitoring platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "apscheduler>=3.11.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "websockets>=14.0",
    "structlog>=24.0.0",
    "greenlet>=3.5.0",
    "tldextract>=5.3.1",
    "dnspython>=2.8.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "maxminddb>=2.6.0",
    "playwright>=1.40.0",
    "dnstwist>=20241218",
    "procrastinate>=2.14.0",
    "psycopg_pool>=3.2.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "PyJWT>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=5,<5.1",
    "fastapi-sso>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D203",     # 1 blank line required before class docstring (conflicts with formatter)
    "D213",     # Multi-line docstring summary should start at second line
    "D400",     # First line should end with a period
    "D401",     # First line should be in imperative mood
    "ANN101",   # Missing type annotation for self in method (deprecated)
    "ANN102",   # Missing type annotation for cls in classmethod (deprecated)
    "FBT001",   # Boolean positional arg in function definition
    "FBT002",   # Boolean default value in function definition
    "COM812",   # Trailing comma missing (formatter handles this)
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
markers = [
    "unit: pure unit tests with no database or external process dependency",
    "db: tests that require the Postgres test database",
    "simulation: tests that exercise fixture-backed simulation mode",
    "network_mocked: tests that exercise network code through mocked clients/transports",
    "integration: multi-component tests that still avoid public target traffic",
]

[tool.hatch.build.targets.wheel]
packages = ["src/easm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
